# yhkee0404.github.io

./: .gitignore  .nojekyll  .tool-versions  _config.yml  _listing.yml  _quarto.yml  about.docx  about.html  about.qmd  ads.txt  algorithms.html  algorithms.qmd  bible.html  bible.qmd  change_time.py  custom-reference-doc.docx  data-science.html  data-science.qmd  database-listing.json  database.html  database.qmd  design-patterns.qmd  diary.html  diary.qmd  docker-compose.yml  drafts.html  drafts.qmd  index-featured.xml  index.html  index.qmd  index.xml  listings.json  miscellaneous.html  miscellaneous.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  troubleshoot.html  troubleshoot.qmd  (+2 more)
.circleci/: config.yml
.github/workflows/: publish.yml
_bibliographies/book/: lee2021bert_gpt.bibtex
_bibliographies/online/: apple_support2024update.bib  commit_im2025layer_normalization.bib  hj5864_2024hangul.bib  kakadais2024remote.bib  kang2024lost_update.bib  king_dropbox.bib  king_dropbox_sharelist.bib  king_ticketmaster.bib  king_ticketmaster_search.bib  lee2012xml.bib  lee2025nand.bib  mdn_web_docs2023xml_version.bib  mihalcea2023lost_update.bib  ringer2014postgres.bib  rusendic2022single.bib  sil2016grid.bib  stanko2022single.bib
_bibliographies/paper/: boonstra2024prompt.bib  li2019positionalnormalization.bib  vaswani2017attentionneed.bib
_docker/: libreoffice.sh
_fonts/: dejavu-serif.html  noto-sans-kr.html
_images/thumbnails/: pylock-toml-real-python-youtube-hqdefault.avif
_java/yhkee0404/: HELP.md  build.gradle.kts  settings.gradle.kts
_js/: leetcode-discord.js  microservice-spof-hardware.mmd
_kubernetes/example/: LICENSE
_pages/: about.md
_posts/: 2021-04-22-from-disk-cache  2021-12-29-understand-casting-generics-in-java-by-eating-broken-glass.md  2022-02-10-package-java-util-stream.md  2022-09-22-hadamard-product.md  2022-09-22-inner-product-and-element-wise-product.md  2022-09-22-l1-norm.md  2022-09-26-andrej-karpathy.md  2022-09-26-fei-fei-li.md  2022-09-26-from-numpy.md  2022-09-26-ilsvrc.md  2022-09-26-openai.md  2022-09-26-unsqueeze.md  2022-09-26-view-and-reshape.md
_python/yhkee0404/: .gitignore  README.md  main.py  pyproject.toml  workspace.toml
_python/yhkee0404/bases/yhkee0404/example_consumer/: __init__.py  core.py
_python/yhkee0404/bases/yhkee0404/example_greet_api/: __init__.py  core.py
_python/yhkee0404/bases/yhkee0404/example_greet_aws_lambda/: __init__.py  core.py
_python/yhkee0404/bases/yhkee0404/example_greet_gcp_function/: __init__.py  core.py
_python/yhkee0404/bases/yhkee0404/example_message_api/: __init__.py  core.py
_python/yhkee0404/components/yhkee0404/example_database/: __init__.py
_python/yhkee0404/components/yhkee0404/example_database/message/: crud.py  model.py
_python/yhkee0404/components/yhkee0404/example_dictionaries/: __init__.py  core.py
_python/yhkee0404/components/yhkee0404/example_greeting/: __init__.py
_python/yhkee0404/components/yhkee0404/example_kafka/: __init__.py  consumer.py  core.py  producer.py
_python/yhkee0404/components/yhkee0404/example_log/: __init__.py  core.py
_python/yhkee0404/components/yhkee0404/example_message/: __init__.py  core.py
_python/yhkee0404/components/yhkee0404/example_schema/: __init__.py  message.py
_python/yhkee0404/components/yhkee0404/pattern_observer/: __init__.py  core.py
_python/yhkee0404/development/example/: david.py
_python/yhkee0404/projects/example_consumer_project/: Dockerfile  pyproject.toml  requirements.txt
_python/yhkee0404/projects/example_message_fastapi_project/: Dockerfile  pyproject.toml  requirements.txt
_python/yhkee0404/projects/example_my_aws_lambda_project/: package-lock.json  pyproject.toml  serverless.yml
_python/yhkee0404/projects/example_my_fastapi_project/: Dockerfile  README.md  pyproject.toml  requirements.txt
_python/yhkee0404/projects/example_my_fastapi_project/kubernetes/development/: deployment.yaml  kustomization.yaml
_python/yhkee0404/projects/example_my_fastapi_project/kubernetes/staging/: deployment.yaml  kustomization.yaml
_python/yhkee0404/projects/example_my_gcp_function_project/: Makefile  pyproject.toml
_python/yhkee0404/test/: conftest.py
_python/yhkee0404/test/bases/yhkee0404/example_consumer/: test_core.py
_python/yhkee0404/test/components/example_database/: test_core.py
_python/yhkee0404/test/components/example_greeting/: test_core.py
_python/yhkee0404/test/components/example_log/: test_core.py
_python/yhkee0404/test/components/yhkee0404/example_dictionaries/: test_core.py
_python/yhkee0404/test/components/yhkee0404/example_kafka/: test_core.py
_python/yhkee0404/test/components/yhkee0404/pattern_observer/: test_core.py
algorithms/: index.html
cv/: _links.qmd  _metadata.yaml  styles.css
cv/en/: draft.html  draft.qmd  index.html  index.qmd
cv/ko/: index.html  index.qmd  noto-sans-kr.html  reference.docx  styles.css  yhkee0404.docx
data-science/: index.html
database/: index.html
drafts/: _metadata.yml  dummy.html  dummy.qmd  index.html  index.qmd
drafts/miscellaneous/: _metadata.yml
hmm/: index.qmd
javascript/: leetcode-discord.js
listings/: _metadata.yml  algorithms.html  algorithms.qmd  data-science.html  data-science.qmd  database.html  database.qmd  drafts.html  drafts.qmd  troubleshoot.html  troubleshoot.qmd  web.html  web.qmd
listings/algorithms/: index.html
listings/data-science/: index.html
listings/database/: index.html
listings/troubleshoot/: index.html
listings/web/: index.html
posts/: _metadata.yml
posts/algorithms/: _metadata.yml  index.html  index.qmd
posts/beautiful-sequence-2/: index.html  index.qmd
posts/bible/: _metadata.yml
posts/change-to-capital/: index.html  index.qmd
posts/data-science/: _metadata.yml  index.html  index.qmd
posts/database/: _metadata.yml  index.html  index.qmd
posts/design-patterns/: _metadata.yml
posts/determine-escapableness-with-2-ways/: index.html  index.qmd
posts/keep-the-lead-3/: index.html
posts/lis-on-the-integer-grid/: index.html
troubleshoot/: index.html
web/: index.html
(+174 files in other folders)
