[project]
name = "yhkee0404.github.io"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yhkee0404", email = "yhkee0404@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "typing>=3.7.4.3",
]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm]
distribution = false
