[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "example_consumer_project"
version = "0.1.0"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.8"

dependencies = [
  "confluent-kafka~=2.3.0",
]

[project.scripts]
consumer = "my_custom_ns.yhkee0404.example_consumer.core:main"

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["my_custom_ns"]

# This section is when you want to prefix the top namespace (when packaging libraries)
[tool.polylith.build]
top-namespace = "my_custom_ns"

[tool.polylith.bricks]
"../../bases/yhkee0404/example_consumer" = "yhkee0404/example_consumer"
"../../components/yhkee0404/example_log" = "yhkee0404/example_log"
"../../components/yhkee0404/example_kafka" = "yhkee0404/example_kafka"
