[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "example_my_aws_lambda_project"
version = "1.1.1"
description = 'an example aws lambda project'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.10"

dependencies = []

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building sdsts
[tool.hatch.build.targets.wheel]
packages = ["yhkee0404"]

[tool.polylith.bricks]
"../../bases/yhkee0404/example_greet_aws_lambda" = "yhkee0404/example_greet_aws_lambda"
"../../components/yhkee0404/example_greeting" = "yhkee0404/example_greeting"
"../../components/yhkee0404/example_log" = "yhkee0404/example_log"
