[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "example_my_fastapi_project"
version = "0.0.1"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.8"

dependencies = [
  "fastapi~=0.106.0",
  "uvicorn~=0.25.0",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["yhkee0404"]

[tool.polylith.bricks]
"../../bases/yhkee0404/example_greet_api" = "yhkee0404/example_greet_api"
"../../components/yhkee0404/example_greeting" = "yhkee0404/example_greeting"
"../../components/yhkee0404/example_log" = "yhkee0404/example_log"
