[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "example_my_fastapi_project"
version = "0.0.1"
description = 'an example FastAPI project'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.10"

dependencies = [
  "fastapi~=0.115.12",
  "uvicorn~=0.27.1",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["yhkee0404"]

[tool.polylith.bricks]
"../../bases/yhkee0404/example_greet_api" = "yhkee0404/example_greet_api"
"../../components/yhkee0404/example_greeting" = "yhkee0404/example_greeting"
"../../components/yhkee0404/example_log" = "yhkee0404/example_log"
